# netolight

./: .gitignore  Makefile  bitbucket-pipelines.yml  docker-compose.override.yml  docker-compose.yml
api/: Dockerfile  Dockerfile.dev  alembic.ini  dev-run.sh  pyproject.toml  run.sh
api/api/: __init__.py  config.py  log.py  main.py  models.py  postgres.py  repositories.py  routers.py  rs.py  schemas.py  services.py  utils.py
api/forgot-password-mail/: app.py
api/migrations/: env.py
api/migrations/versions/: 17a8c34d331e_.py  6fa954d3f902_.py  988116ea0bb1_.py  a2ff71067aa4_.py
api/tests/: conftest.py  test_services.py
configuration/chirpstack/: chirpstack.toml
configuration/postgresql/initdb/: 003-init-netolight.sh
dimmer/: Dockerfile  Dockerfile.dev  pyproject.toml
dimmer/dimmer/: commands.py  log.py  main.py
web/: Dockerfile  Dockerfile.dev  README.md  nginx.conf.template  package-lock.json  package.json  run.sh
web/public/: index.html
web/src/: App.js  config.js  index.js
web/src/assets/images/profile/: UserProfileBackLeft.js  UserProfileBackRight.js
web/src/components/: Locales.js  MainCard.js  RTLLayout.js  SecondaryAction.js
web/src/components/@extended/: AnimateButton.js  Avatar.js  Breadcrumbs.js  Dot.js  IconButton.js  LoadingButton.js  Snackbar.js  Transitions.js
web/src/components/@extended/Progress/: CircularWithLabel.js  LinearWithIcon.js  LinearWithLabel.js
web/src/components/cards/: AuthFooter.js  ComponentHeader.js
web/src/components/cards/dimningprofile/: DimmingPlan.js
web/src/components/cards/profile/: UserCard.js  UserDialog.js
web/src/components/cards/statistics/: AnalyticsDataCard.js  EnergyReportCard.js  HoverSocialCard.js  ReportCard.js  RoundIconCard.js  UserCountCard.js
web/src/components/logo/: LogoIcon.js  LogoMain.js  index.js
web/src/contexts/: ConfigContext.js  JWTContext.js
web/src/layout/CommonLayout/: ComponentLayout.js  FooterBlock.js  Header.js  index.js
web/src/layout/MainLayout/: Footer.js  index.js
web/src/menu-items/: control.js  index.js  infrastructure.js  statistics.js
web/src/pages/: landing.js
web/src/pages/auth/: check-mail.js  code-verification.js  forgot-password.js  login.js  reset-password.js
web/src/pages/dashboard/: index.js
web/src/pages/dimmingcalendar/: index.js
web/src/pages/dimmingprofiles/: index.js
web/src/pages/energy-consumption/: index.js
web/src/pages/gateways/: index.js
web/src/pages/streetlamp-events/: index.js
web/src/pages/streetlamps/: index.js
web/src/pages/users/: index.js
web/src/routes/: LoginRoutes.js  MainRoutes.js  index.js
web/src/sections/auth/: AuthCard.js  AuthWrapper.js
web/src/sections/dashboard/: StreetlampsAlarmsChart.js  StreetlampsConnectivityChart.js  StreetlampsEnergyOverviewChart.js  StreetlampsLifeSpanChart.js  StreetlampsMap.js
web/src/sections/dimmingcalendar/: AddDimmingEventForm.js  CalendarStyled.js  ColorPalette.js  Toolbar.js
web/src/sections/dimmingprofiles/: AddDimmingProfile.js
web/src/sections/gateways/: AddGateway.js
web/src/sections/streetlamps/: AddStreetlamp.js  AddStreetlampFile.js  StreetlampCli.js
web/src/sections/users/: AddUser.js
web/src/store/: index.js
web/src/store/reducers/: auth.js  dimmingCalendar.js  index.js
web/src/themes/: index.js  palette.js  shadows.js
web/src/themes/overrides/: Accordion.js  AccordionDetails.js  AccordionSummary.js  Alert.js  Button.js  Checkbox.js  DialogContentText.js  Fab.js  ListItemButton.js  OutlinedInput.js  PaginationItem.js  Radio.js  Slider.js  Switch.js  Tab.js  TableCell.js  TableFooter.js  TableHead.js  ToggleButton.js  index.js
web/src/themes/theme/: default.js  index.js  theme1.js  theme2.js  theme3.js  theme4.js  theme5.js  theme6.js  theme7.js  theme8.js
web/src/utils/: SyntaxHighlight.js  mock-data.js  react-table.js  unpackErrors.js
web/src/utils/locales/: en.json  es.json
web/src/utils/route-guard/: AuthGuard.js  GuestGuard.js
(+28 files in other folders)
